@@ -3,7 +3,7 @@
 from weakref import WeakSet
 
 from record import Record
-from field import Field, O2MField
+from field import Field, O2MField, M2OField, ReferenceField
 from tryton.signal_event import SignalEvent
 from tryton.common.domain_inversion import is_leaf
 from tryton.common import RPCExecute, RPCException, MODELACCESS
@@ -282,6 +282,14 @@ class Group(SignalEvent, list):
         record.modified_fields.setdefault('id')
         record.signal('record-modified')
         self.signal('group-changed', record)
+        # Set parent field to trigger on_change
+        if self.parent and self.parent_name in self.fields:
+            field = self.fields[self.parent_name]
+            if isinstance(field, (M2OField, ReferenceField)):
+                value = self.parent.id, ''
+                if isinstance(field, ReferenceField):
+                    value = self.parent.model_name, value
+                field.set_client(record, value)
         return record
 
     def set_sequence(self, field='sequence'):
